# simple-time-tracking

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 16279d9e2d25_add_password_reset.py  2a5dc2bdc90f_create_users_auth_sessions.py  2ca9a0a71965_clock_events_idempotency.py  2f06e12c33fb_add_day_notes.py  (+2 more)
apps/api/app/: absence_service.py  clock_validation.py  db.py  email.py  main.py  models.py  push_service.py  push_worker.py  reporting.py  schemas.py  security.py  settings.py  time_calc.py
apps/web/: Dockerfile  README.md  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
backend/: .dockerignore  .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8ccc505cb77b_add_clock_events.py  f84fbaa73c8c_add_push_notifications.py
backend/app/: clock_validation.py  main.py  models.py  password_reset.py  reporting.py  schemas.py  settings.py  time_calc.py
backend/app/routers/: absences.py  auth.py  clock.py  dashboard.py  push.py  settings.py
docs/: spec.md
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/public/: push-sw.js
frontend/src/: index.css  main.tsx
frontend/src/lib/: format.ts  i18n.tsx  push.ts
frontend/src/pages/: DashboardPage.tsx  ForgotPasswordPage.tsx  HistoryPage.tsx  ResetPasswordPage.tsx  SettingsPage.tsx
(+27 files in other folders)
